frame/support/test/tests/pallet_ui/hooks_invalid_on_runtime_upgrade.rs
#[frame_support::pallet]
mod pallet {
	use frame_support::pallet_prelude::*;
	use frame_system::pallet_prelude::*;

	#[pallet::config]
	pub trait Config: frame_system::Config {}

	#[pallet::pallet]
	pub struct Pallet<T>(_);

	#[pallet::hooks]
	impl<T: Config> Hooks<BlockNumberFor<T>> for Pallet<T> {
		fn on_runtime_upgrade() -> Weight { 0 }
	}

	#[pallet::call]
	impl<T: Config> Pallet<T> {}
}

fn main() {
}
